Fix loading spinner z-index

--- a/frontend/src/app/components/hashrates-chart-pools/hashrate-chart-pools.component.scss
+++ b/frontend/src/app/components/hashrates-chart-pools/hashrate-chart-pools.component.scss
@@ -59,7 +59,7 @@
   position: absolute;
   top: 50%;
   left: calc(50% - 15px);
-  z-index: 100;
+  z-index: 99;
 }
 .loadingGraphs.widget {
   top: 75%;
