--- a/frontend/src/app/lightning/nodes-channels-map/nodes-channels-map.component.scss
+++ b/frontend/src/app/lightning/nodes-channels-map/nodes-channels-map.component.scss
@@ -102,7 +102,7 @@
   position: absolute;
   top: 50%;
   left: calc(50% - 15px);
-  z-index: 100;
+  z-index: 99;
   @media (max-width: 767.98px) {
     top: 550px;
   }
@@ -110,7 +110,7 @@
 .loading-spinner.widget {
   position: absolute;
   top: 200px;
-  z-index: 100;
+  z-index: 99;
   width: 100%;
   left: 0;
   @media (max-width: 767.98px) {
@@ -120,7 +120,7 @@
 .loading-spinner.nodepage {
   position: absolute;
   top: 200px;
-  z-index: 100;
+  z-index: 99;
   width: 100%;
   left: 0;
 }
@@ -128,7 +128,7 @@
 .loading-spinner.channelpage {
   position: absolute;
   top: 400px;
-  z-index: 100;
+  z-index: 99;
   width: 100%;
   left: 0;
   @media (max-width: 767.98px) {
